# TemperatureMonitor

./: .gitignore  CMakeLists.txt  README.md
include/: adc.h  common.h  device.h  edf_sched.h  gpio.h  hal.h  hal_device.h  i2c.h  interrupt.h  led_controller.h  temp_sensor.h
src/: adc.c  edf_sched.c  gpio.c  hal.c  i2c.c  interrupt.c  led_controller.c  led_simulator.py  main_br.c  main_hal.c  main_sched.c
